...
                                    <rect key="frame" x="32" y="412" width="311" height="60"/>
                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="60" id="zrx-QD-05B"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                    <state key="normal" title="Calculate">
                                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </state>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                            <real key="value" value="10"/>
                                        </userDefinedRuntimeAttribute>
...
